finished writing the api documentation for relational databases
