# src/main/java/com/alexcomeau/rest/relational/objects/datatypes/ListPair.java
@@ -1,0 +1,19 @@
+package com.alexcomeau.rest.relational.objects.datatypes;
+
+import java.io.Serializable;
+import java.util.ArrayList;
+
+import org.apache.commons.lang3.tuple.Pair;
+
+public class ListPair implements Serializable{
+    private ArrayList<Pair<String, String>> data = null;
+
+    public ArrayList<Pair<String, String>> getData() {
+        return this.data;
+    }
+
+    public ListPair setData(ArrayList<Pair<String, String>> listPair) {
+        this.data = listPair;
+        return this;
+    }
+}
