# src/main/java/com/alexcomeau/rest/relational/objects/datatypes/ListString.java
@@ -1,16 +1,16 @@
-package com.alexcomeau.rest.relational.objects.relationalreturns;
+package com.alexcomeau.rest.relational.objects.datatypes;
 
 import java.io.Serializable;
 import java.util.ArrayList;
 
-public class RelationalReturnList implements Serializable{
+public class ListString implements Serializable{
     private ArrayList<String> data = null;
 
     public ArrayList<String> getData() {
         return this.data;
     }
 
-    public RelationalReturnList setData(ArrayList<String> list) {
+    public ListString setData(ArrayList<String> list) {
         this.data = list;
         return this;
     }
