# src/main/java/com/alexcomeau/rest/relational/objects/datatypes/ListTable.java
@@ -1,17 +1,17 @@
-package com.alexcomeau.rest.relational.objects.relationalreturns;
+package com.alexcomeau.rest.relational.objects.datatypes;
 
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.HashMap;
 
-public class RelationalReturnListTable implements Serializable{
+public class ListTable implements Serializable{
     private ArrayList<HashMap<String, String>> data = null;
 
     public ArrayList<HashMap<String,String>> getData() {
         return this.data;
     }
 
-    public RelationalReturnListTable setData(ArrayList<HashMap<String,String>> listTable) {
+    public ListTable setData(ArrayList<HashMap<String,String>> listTable) {
         this.data = listTable;
         return this;
     }
